welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:20: error: not found: value num
	tri(num);
            ^