welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def tri(t:Array[Int]) {
	var i,j,k:Int=0;

	for (x<- 0 to t.length-1) {
		for (z<-0 to t.length-1) {
			i=t(x);
			j=t(z+1);
			if (i>=j) {
				k=i;
				i=j;
				j=k;
			}
		}
	}
}

def maxValue(nums:Array[Int]): Int = {
	var y,i,j,t:Int=0;

	tri(num);
	return nums(nums.length-1)
}
